# first-haskell

./: .travis.yml  LICENSE  README.md  first-haskell.cabal  first.cabal  stack.yaml
app/: Main.hs
benchmark/: Main.hs
doctest/: Main.hs
executable/: Main.hs
src/: Lib.hs
test/: LibSpec.hs
test-suite/: Main.hs  MathSpec.hs
