name:                first-haskell
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/ott8bre/first-haskell#readme
license:             BSD3
license-file:        LICENSE
author:              Francesco Frosini
maintainer:          ott8bre@gmail.com
copyright:           2016 Francesco Frosini
category:            Exe
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable first-haskell-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , first-haskell
  default-language:    Haskell2010

test-suite first-haskell-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , first-haskell
                     , hspec == 2.*
                     , QuickCheck == 2.*
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ott8bre/first-haskell
