name:                first
version:             0.1.0.0
synopsis:            Initial project from stack
description:         Please see README.md
homepage:            https://github.com/ott8bre/first-haskell#readme
bug-reports:         https://github.com/ott8bre/first/issues
license:             BSD3
license-file:        LICENSE
author:              Francesco Frosini
maintainer:          ott8bre@gmail.com
copyright:           2016 Francesco Frosini
category:            Other
build-type:          Simple
cabal-version:       >= 1.10

extra-source-files:  README.md

library
  hs-source-dirs:      library
  exposed-modules:     Math
  build-depends:       base
  default-language:    Haskell2010

executable first
  hs-source-dirs:      executable
  main-is:             Main.hs
  ghc-options:         -Wall -rtsopts -threaded -with-rtsopts=-N
  build-depends:       base
                     , first
  default-language:    Haskell2010

test-suite first-test-suite
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test-suite
  main-is:             Main.hs
  build-depends:       base
                     , first
                     , hspec
                     , QuickCheck
  ghc-options:         -Wall -rtsopts -threaded -with-rtsopts=-N
  default-language:    Haskell2010

benchmark first-benchmarks
  type:              exitcode-stdio-1.0
  main-is:           Main.hs
  hs-source-dirs:    benchmark
  ghc-options:       -Wall -rtsopts -threaded -with-rtsopts=-N
  build-depends:     base
                   , first
                   , criterion
  default-language:  Haskell2010

source-repository head
  type:     git
  location: https://github.com/ott8bre/first-haskell
