name:                first
version:             0.1.0.0
synopsis:            Initial project from stack
description:         Please see README.md
homepage:            https://github.com/ott8bre/first-haskell#readme
bug-reports:         https://github.com/ott8bre/first/issues
license:             BSD3
license-file:        LICENSE
author:              Francesco Frosini
maintainer:          ott8bre@gmail.com
copyright:           2017 Francesco Frosini
category:            Other
build-type:          Simple
stability:           alpha (experimental)
cabal-version:       >= 1.10

extra-source-files:  README.md

source-repository head
  type:     git
  location: https://github.com/ott8bre/first-haskell

library
  default-language:    Haskell2010
  ghc-options:         -Wall -Werror -O2
  hs-source-dirs:      library
  exposed-modules:     Math
  build-depends:       base


executable first
  default-language:    Haskell2010
  ghc-options:         -Wall -Werror -O2 -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:      executable
  main-is:             Main.hs
  build-depends:       base
                     , first


test-suite first-test-suite
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  ghc-options:         -Wall -Werror -O2 -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:      test-suite
  main-is:             Main.hs
  build-depends:       base
                     , first
                     , hspec
                     , QuickCheck

test-suite first-doctest
  type:              exitcode-stdio-1.0
  default-language:  Haskell2010
  ghc-options:       -Wall -Werror -O2 -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:    doctest
  main-is:           Main.hs
  build-depends:     base >= 4.8 && < 5
                   , doctest >=0.10
                   , Glob >= 0.7
                   , QuickCheck >= 2.5
                   , first

benchmark first-benchmarks
  type:              exitcode-stdio-1.0
  default-language:  Haskell2010
  ghc-options:       -Wall -Werror -O2 -threaded -rtsopts -with-rtsopts=-N
  main-is:           Main.hs
  hs-source-dirs:    benchmark
  build-depends:     base
                   , first
                   , criterion
